--- a/showcase/blog-with-sidebar.html
+++ b/showcase/blog-with-sidebar.html
@@ -3,10 +3,10 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Wiki with Sidebar Exercise | 6026 Student Showcase</title>
+        <title>Blog with Sidebar Exercise | 6026 Student Showcase</title>
         <link href="css/setup.css" rel="stylesheet">
         <link href="css/style.css" rel="stylesheet">
-        <link href="css/wiki-with-sidebar.css" rel="stylesheet">
+        <link href="css/blog-with-sidebar.css" rel="stylesheet">
     </head>
     <body>
         <div class="scene">
@@ -22,7 +22,7 @@
                 </div>
             </div>
         </div>
-        <script src="js/wiki-with-sidebar.js"></script>
+        <script src="js/blog-with-sidebar.js"></script>
         <script src="js/showcase.js"></script>
     </body>
 </html>
