--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -8,24 +8,25 @@
     <body>
         
         <div id="layout">
-            <h1>GDWD 105 - Agenda for June 19th</h1>
-            <h3>Week 22 Day 5 (Page Layouts - Day 3)</h3>
+            <h1>GDWD 105 - Agenda for June 20th</h1>
+            <h3>Week 23 Day 1 (Page Layouts - Day 4)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Warm-up Question</h2>
                     <ul>
-                        <li>What was one of your favorite Saturday morning cartoons growing up?</li>
+                        <li>What is one of your favorite Disney/Pixar movies?</li>
                     </ul>
-                    <div class="img-container">
+                    <div class="img-container more-space dark-blue">
                         <img 
-                            src="images/atla_cartoon.jpg"
-                            alt="avatar last airbender animals"
+                            src="images/inside-out.jpg"
+                            alt="feelings"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Exercise</span>Flexbox Drills - Part 1</li>
-                        <li><span class="type">Exercise</span>Blog with Sidebar</li>
+                        <li><span class="type">Exercise</span>Using the Coding Cookbook 11</li>
+                        <li><span class="type">Exercise</span>Grid Drills</li>
+                        <li><span class="type">Exercise</span>MeTube</li>
                     </ul>
                 </div>
 
@@ -34,23 +35,22 @@
                         <h3>Announcements (9am-9:10am)</h3>
                         <h3>Period 1 (9:10am-10:20am)</h3>
                         <ul>
-                            <li><span class="type">PowerPoint</span>Flexbox (Part 2)</li>
-                            <li><span class="type">Exercise</span>Flexbox Drills - Part 1</li>
+                            <li><span class="type">Exercise</span>Using the Coding Cookbook 11</li>
+                            <li><span class="type">Exercise</span>Grid Drills</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (10:30am-12pm)</h3>
                         <ul>
-                            <li><span class="type">PowerPoint</span>CSS Grid</li>
-                            <li><span class="type">Demo</span>Two Column Layouts (Grid)</li>
+                            <li><span class="type">Demo</span>Two Column Layouts (Mixed)</li>
                         </ul>
                     </div>
                     <h3 class="centered">Lunch Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (12:45pm-2:00pm)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Blog with Sidebar</li>
+                            <li><span class="type">Exercise</span>MeTube</li>
                         </ul>
                     </div>
                 </div>
