--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -8,24 +8,22 @@
     <body>
         
         <div id="layout">
-            <h1>GDWD 105 - Agenda for June 20th</h1>
-            <h3>Week 23 Day 1 (Page Layouts - Day 4)</h3>
+            <h1>GDWD 105 - Agenda for June 23th</h1>
+            <h3>Week 23 Day 2 (Page Layouts - Day 5)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Warm-up Question</h2>
                     <ul>
-                        <li>What is one of your favorite Disney/Pixar movies?</li>
+                        <li>What is one of your favorite DreamWorks movies?</li>
                     </ul>
-                    <div class="img-container more-space dark-blue">
+                    <div class="img-container">
                         <img 
-                            src="images/inside-out.jpg"
-                            alt="feelings"
+                            src="images/httyd.jpg"
+                            alt="how to train your dragon"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Exercise</span>Using the Coding Cookbook 11</li>
-                        <li><span class="type">Exercise</span>Grid Drills</li>
                         <li><span class="type">Exercise</span>MeTube</li>
                     </ul>
                 </div>
@@ -35,22 +33,22 @@
                         <h3>Announcements (9am-9:10am)</h3>
                         <h3>Period 1 (9:10am-10:20am)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Using the Coding Cookbook 11</li>
-                            <li><span class="type">Exercise</span>Grid Drills</li>
+                            <li><span class="type">Exercise</span>MeTube</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (10:30am-12pm)</h3>
                         <ul>
-                            <li><span class="type">Demo</span>Two Column Layouts (Mixed)</li>
+                            <li><span class="type">Kahoot</span>Basic Flexbox Review</li>
+                            <li><span class="type">Kahoot</span>Basic CSS Grid Review</li>
                         </ul>
                     </div>
                     <h3 class="centered">Lunch Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (12:45pm-2:00pm)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>MeTube</li>
+                            <li><span class="type">Project</span>"mebay" Product Page</li>
                         </ul>
                     </div>
                 </div>
