6026 W23D3 agenda (day) [slightly behind]

--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -8,23 +8,23 @@
     <body>
         
         <div id="layout">
-            <h1>GDWD 105 - Agenda for June 23th</h1>
-            <h3>Week 23 Day 2 (Page Layouts - Day 5)</h3>
+            <h1>GDWD 105 - Agenda for June 24th</h1>
+            <h3>Week 23 Day 3 (Page Layouts - LAB DAY)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Warm-up Question</h2>
                     <ul>
-                        <li>What is one of your favorite DreamWorks movies?</li>
+                        <li>What is your favorite superhero movie or series? (if you have one)</li>
                     </ul>
-                    <div class="img-container">
+                    <div class="img-container more-space dark-gray">
                         <img 
-                            src="images/httyd.jpg"
-                            alt="how to train your dragon"
+                            src="images/avengers.jpeg"
+                            alt="avengers"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Exercise</span>MeTube</li>
+                        <li><span class="type">Project</span>"mebay" Product Page</li>
                     </ul>
                 </div>
 
@@ -33,22 +33,23 @@
                         <h3>Announcements (9am-9:10am)</h3>
                         <h3>Period 1 (9:10am-10:20am)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>MeTube</li>
+                            <li><span class="type">Project</span>"mebay" Product Page</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (10:30am-12pm)</h3>
                         <ul>
-                            <li><span class="type">Kahoot</span>Basic Flexbox Review</li>
-                            <li><span class="type">Kahoot</span>Basic CSS Grid Review</li>
+                            <li><span class="type">Project</span>"mebay" Product Page [cont.]</li>
                         </ul>
                     </div>
                     <h3 class="centered">Lunch Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (12:45pm-2:00pm)</h3>
                         <ul>
-                            <li><span class="type">Project</span>"mebay" Product Page</li>
+                            <li><span class="type">Lab Time</span>Quiz Study Hints</li>
+                            <li><span class="type">Survey</span>Page Layouts Session Wrap Up</li>
+                            <li><span class="type">Lab Time</span>Past Assignments/Feedback</li>
                         </ul>
                     </div>
                 </div>
