--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -8,23 +8,24 @@
     <body>
         
         <div id="layout">
-            <h1>GDWD 105 - Agenda for June 24th</h1>
-            <h3>Week 23 Day 3 (Page Layouts - LAB DAY)</h3>
+            <h1>GDWD 105 - Agenda for June 25th</h1>
+            <h3>Week 23 Day 4 (Content Layouts - Day 1)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Warm-up Question</h2>
                     <ul>
-                        <li>What is your favorite superhero movie or series? (if you have one)</li>
+                        <li>Who is your favorite supervillain? (if you have one)</li>
                     </ul>
-                    <div class="img-container more-space dark-gray">
-                        <img 
-                            src="images/avengers.jpeg"
-                            alt="avengers"
+                    <div class="img-container more-space off-black">
+                        <img
+                            src="images/venom.jpeg"
+                            alt="venom"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Project</span>"mebay" Product Page</li>
+                        <li><span class="type">Quiz</span>Advanced CSS and Page Layouts</li>
+                        <li><span class="type">Exercise</span>Trek Cards</li>
                     </ul>
                 </div>
 
@@ -33,23 +34,23 @@
                         <h3>Announcements (9am-9:10am)</h3>
                         <h3>Period 1 (9:10am-10:20am)</h3>
                         <ul>
-                            <li><span class="type">Project</span>"mebay" Product Page</li>
+                            <li><span class="type">Quiz</span>Advanced CSS and Page Layouts</li>
+                            <li><span class="type">Demo</span>Cards, Buttons, and Gradients</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (10:30am-12pm)</h3>
                         <ul>
-                            <li><span class="type">Project</span>"mebay" Product Page [cont.]</li>
+                            <li><span class="type">Demo</span>Cards, Buttons, and Gradients [cont.]</li>
                         </ul>
                     </div>
                     <h3 class="centered">Lunch Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (12:45pm-2:00pm)</h3>
                         <ul>
-                            <li><span class="type">Lab Time</span>Quiz Study Hints</li>
-                            <li><span class="type">Survey</span>Page Layouts Session Wrap Up</li>
-                            <li><span class="type">Lab Time</span>Past Assignments/Feedback</li>
+                            <li><span class="type">Exercise</span>Trek Cards</li>
+                            <li><span class="type">Exercise</span>Animagram Cards (?)</li>
                         </ul>
                     </div>
                 </div>
