--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -8,28 +8,28 @@
     <body>
         
         <div id="layout">
-            <h1>GDWD 105 - Agenda for July 3rd</h1>
-            <h3>Week 24 Day 5 (Navigation & Responsiveness - Day 1)</h3>
+            <h1>GDWD 105 - Agenda for July 7th</h1>
+            <h3>Week 25 Day 1 (Navigation & Responsiveness - Day 2)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Warm-up Question</h2>
                     <ul>
                         Would you rather:
                         <ul>
-                            <li>spend a week trapped <b>outside</b> of your home?</li>
-                            <li>spend a week trapped <b>inside</b> of your home?</li>
+                            <li>get an extra hour in every day, or</li>
+                            <li>get an extra day every 24 days?</li>
                         </ul>
                     </ul>
                     <div class="img-container">
                         <img 
-                            src="images/great-indoors.webp"
-                            alt="the great indoors"
+                            src="images/melty-time.webp"
+                            alt="melty time"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Quiz</span>Content Layouts</li>
-                        <li><span class="type">Exercise</span>Flexbox Drills - Part 2</li>
+                        <li><span class="type">Exercise</span>Using the Coding Cookbook 13</li>
+                        <li><span class="type">Exercise</span>Client Navbars</li>
                     </ul>
                 </div>
 
@@ -38,24 +38,23 @@
                         <h3>Announcements (9am-9:10am)</h3>
                         <h3>Period 1 (9:10am-10:20am)</h3>
                         <ul>
-                            <li><span class="type">Quiz</span>Content Layouts</li>
-                            <li><span class="type">Exercise</span>Flexbox Drills - Part 2</li>
+                            <li><span class="type">Exercise</span>Using the Coding Cookbook 13</li>
+                            <li><span class="type">Exercise</span>Client Navbars</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (10:30am-12pm)</h3>
                         <ul>
-                            <li><span class="type">PowerPoint</span>Navigation Layouts - Navbars</li>
-                            <li><span class="type">Demo</span>Navbars - Basic</li>
+                            <li><span class="type">PowerPoint</span>Responsive Layouts</li>
+                            <li><span class="type">PowerPoint</span>Media Queries</li>
                         </ul>
                     </div>
                     <h3 class="centered">Lunch Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (12:45pm-2:00pm)</h3>
                         <ul>
-                            <li><span class="type">Demo</span>Navbars - Basic [cont.]</li>
-                            <li><span class="type">Exercise</span>Client Navbars?</li>
+                            <li><span class="type">Demo</span>Media Queries and Responsiveness [Part 1]</li>
                         </ul>
                     </div>
                 </div>
