--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -8,26 +8,26 @@
     <body>
         
         <div id="layout">
-            <h1>GDWD 105 - Agenda for July 8th</h1>
-            <h3>Week 25 Day 2 (Navigation & Responsiveness - Day 3)</h3>
+            <h1>GDWD 105 - Agenda for July 9th</h1>
+            <h3>Week 25 Day 3 (Navigation & Responsiveness - Day 4)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Warm-up Question</h2>
                     <ul>
                         <li>
-                            If you could have any creature (either real or fantastical)
-                            as a pet, what would you choose?
+                            Would you rather have the power of flight
+                            or the power to levitate objects?
                         </li>
+
                     </ul>
-                    <div class="img-container more-space">
+                    <div class="img-container more-space dark-gray">
                         <img 
-                            src="images/alt-animal-names.webp"
-                            alt="true names"
+                            src="images/broom-cats.jpg"
+                            alt="broom cats"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Exercise</span>Media Queries</li>
                         <li><span class="type">Exercise</span>Modernizing George RR Martin</li>
                     </ul>
                 </div>
@@ -37,22 +37,21 @@
                         <h3>Announcements (9am-9:10am)</h3>
                         <h3>Period 1 (9:10am-10:20am)</h3>
                         <ul>
-                            <li><span class="type">Demo</span>Media Queries and Responsiveness [Part 1]</li>
-                            <li><span class="type">Exercise</span>Media Queries</li>
+                            <li><span class="type">Exercise</span>Modernizing George RR Martin</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (10:30am-12pm)</h3>
                         <ul>
-                            <li><span class="type">Demo</span>Media Queries and Responsiveness [Part 2]</li>
+                            <li><span class="type">Demo</span>Hiding and Showing Content</li>
                         </ul>
                     </div>
                     <h3 class="centered">Lunch Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (12:45pm-2:00pm)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Modernizing George RR Martin</li>
+                            <li><span class="type">Project</span>Dropdown Menu Site</li>
                         </ul>
                     </div>
                 </div>
