--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -8,26 +8,28 @@
     <body>
         
         <div id="layout">
-            <h1>GDWD 105 - Agenda for July 11th</h1>
-            <h3>Week 25 Day 5 (Navigation & Responsiveness - Lab Day)</h3>
+            <h1>GDWD 105 - Agenda for July 14th</h1>
+            <h3>Week 26 Day 1 (Finals Week)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Warm-up Question</h2>
                     <ul>
                         <li>
-                            Would you rather have a perfect photographic memory 
-                            or a perfect echoic memory?
+                            Would you rather be magically gifted knowledge,
+                            wisdom, or strength?
+
                         </li>
                     </ul>
-                    <div class="img-container more-space blue-gray">
+                    <div class="img-container more-space dark-blue-gray">
                         <img 
-                            src="images/lab-fox.webp"
-                            alt="lab fox"
+                            src="images/buns-of-steel.webp"
+                            alt="buns of steel"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Survey</span>Navigation Layouts Session Wrap Up</li>
+                        <li><span class="type">Quiz</span>Navigation and Responsiveness</li>
+                        <li><span class="type">Exercise</span>Restaurant Site Checkpoint (Home Page)</li>
                     </ul>
                 </div>
 
@@ -36,24 +38,22 @@
                         <h3>Announcements (9am-9:10am)</h3>
                         <h3>Period 1 (9:10am-10:20am)</h3>
                         <ul>
-                            <li><span class="type">Project</span>Dropdown Menu Site</li>
-                            <li><span class="type">Lab Time</span>Past Assignments/Feedback</li>
+                            <li><span class="type">Quiz</span>Navigation and Responsiveness</li>
+                            <li><span class="type">Exercise</span>Restaurant Site Checkpoint (Home Page)</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (10:30am-12pm)</h3>
                         <ul>
-                            <li><span class="type">Lab Time</span>Extra Credit - Hover Gallery</li>
-                            <li><span class="type">Lab Time</span>Extra Credit - E-commerce Site</li>
+                            <li><span class="type">Exercise</span>Restaurant Site Checkpoint (Home Page) [cont.]</li>
                         </ul>
                     </div>
                     <h3 class="centered">Lunch Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (12:45pm-2:00pm)</h3>
                         <ul>
-                            <li><span class="type">Lab Time</span>Study Hints</li>
-                            <li><span class="type">Survey</span>Navigation Layouts Session Wrap Up</li>
+                            <li><span class="type">Exercise</span>Restaurant Site Checkpoint (Home Page) [cont.]</li>
                         </ul>
                     </div>
                 </div>
