--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -8,50 +8,50 @@
     <body>
         
         <div id="layout">
-            <h1>GDWD 105 - Agenda for July 15th</h1>
-            <h3>Week 26 Day 2 (Finals Week)</h3>
+            <h1>GDWD 105 - Agenda for July 16th</h1>
+            <h3>Week 26 Day 3 (Finals Week)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Warm-up Question</h2>
                     <ul>
                         <li>
-                            Are you able to nap during the day?
-
-
+                            Do you have a favorite sport (either to watch or to play)? 
+                            If so, what is it?
                         </li>
                     </ul>
                     <div class="img-container">
                         <img 
-                            src="images/rest-day.jpeg"
-                            alt="rest day"
+                            src="images/fantasy-football.webp"
+                            alt="fantasy football"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Exercise</span>Restaurant Site Checkpoint (Menu Page)</li>
+                        <li><span class="type">FINAL EVAL</span></li>
+                        <li><span class="type">Project</span>Restaurant Site (Complete)</li>
                     </ul>
                 </div>
 
                 <div id="agenda">
                     <div class="wrapper">
                         <h3>Announcements (9am-9:10am)</h3>
-                        <h3>Period 1 (9:10am-10:20am)</h3>
+                        <h3>Period 1 (9:10am-12:00pm)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Restaurant Site Checkpoint (Menu Page)</li>
-                        </ul>
+                            <li><span class="type">FINAL EVAL</span></li>
+                        <!-- </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (10:30am-12pm)</h3>
-                        <ul>
-                            <li><span class="type">Exercise</span>Restaurant Site Checkpoint (Menu Page) [cont.]</li>
+                        <ul> -->
+                            <li><span class="type">Project</span>Restaurant Site (Complete)</li>
                         </ul>
                     </div>
                     <h3 class="centered">Lunch Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (12:45pm-2:00pm)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Restaurant Site Checkpoint (Menu Page) [cont.]</li>
+                            <li><span class="type">Project</span>Restaurant Site (Complete) [cont.]</li>
                         </ul>
                     </div>
                 </div>
