--- a/cookbook/appetizers/adding-a-menu-wordpress.html
+++ b/cookbook/appetizers/adding-a-menu-wordpress.html
@@ -66,7 +66,7 @@
                         </h2>
                         <div class="dropdown-items">
                             <h2><a href="../appetizers.html" class="selected">Tutorials</a></h2>
-                            <h2><a href="../demos.html">Coding Demos</a></h2>
+                            <h2 id="demos"><a href="../demos.html">Coding Demos</a></h2>
                             <h2><a href="../troubleshooting.html">Troubleshooting</a></h2>
                         </div>
                     </div>
