--- a/cookbook/appetizers/web-dev-startup.html
+++ b/cookbook/appetizers/web-dev-startup.html
@@ -66,7 +66,7 @@
                         </h2>
                         <div class="dropdown-items">
                             <h2><a href="../appetizers.html" class="selected">Tutorials</a></h2>
-                            <h2><a href="../demos.html">Coding Demos</a></h2>
+                            <h2 id="demos"><a href="../demos.html">Coding Demos</a></h2>
                             <h2><a href="../troubleshooting.html">Troubleshooting</a></h2>
                         </div>
                     </div>
@@ -720,8 +720,7 @@
                             <p class="indent">
                                 This will make it 
                                 easier to find in your Launchpad, and will also
-                                set it up properly to interact with the other
-                                application we'll be installing later.
+                                set it up properly to interact with VS Code.
                             </p>
                         </div>
                         <div class="imageContainer">
