--- a/cookbook/troubleshooting/wordpress-caching.html
+++ b/cookbook/troubleshooting/wordpress-caching.html
@@ -136,7 +136,14 @@
                             </p>
                             <p class="indent">
                                 However, be aware that this method clears 
-                                the cache for THIS PAGE ONLY.
+                                the cache for THIS PAGE ONLY, and only 
+                                TEMPORARILY.
+                            </p>
+                            <p class="indent">
+                                If you are a student, this approach will not 
+                                meet the submission requirements for your 
+                                WordPress site assignments, so use Option 1 
+                                above instead!
                             </p>
                         </div>
                         <div class="imageContainer">
