--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -7,27 +7,27 @@
     </head>
     <body>
         <div id="layout">
-            <h1>GDWD 105 - Agenda for August 6th</h1>
-            <h3>Week 19 Day 5 (Intro to CMS)</h3>
+            <h1>GDWD 105 - Agenda for August 7th</h1>
+            <h3>Week 20 Day 1 (Customizing WordPress)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Attendance Question</h2>
                     <ul>
                         <li>
-                            If you had to choose, would you pick extreme cold? or extreme heat?
+                            <li>What is your go-to comfort food?</li>
 
                         </li>
                     </ul>
                     <div class="img-container">
                         <img 
-                            src="images/procrastination.webp"
-                            alt="procrastination"
+                            src="images/feelingsnacky.jpg"
+                            alt="feeling snacky"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Project</span>Recipe Page (WordPress)</li>
-                        <li><span class="type">Survey</span>Intro to CMS Wrap Up</li>
+                        <li><span class="type">Quiz</span>Intro to WordPress</li>
+                        <li><span class="type">Exercise</span>Replicating Raycon - About Us</li>
                     </ul>
                 </div>
 
@@ -37,22 +37,22 @@
 
                         <h3>Period 1 (6:10pm-7:10pm)</h3>
                         <ul>
-                            <li><span class="type">Project</span>Recipe Page (WordPress)</li>
+                            <li><span class="type">Quiz</span>Intro to WordPress</li>
+                            <li><span class="type">PowerPoint</span>Domains, Hosting, and Website Creation</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (7:20pm-8:30pm)</h3>
                         <ul>
-                            <li><span class="type">Project</span>Recipe Page (WordPress) [cont.]</li>
+                            <li><span class="type">PowerPoint</span>Domains, Hosting, and Website Creation [cont.]</li>
                         </ul>
                     </div>
                     <h3 class="centered">Dinner Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (9:15pm-11pm)</h3>
                         <ul>
-                            <li><span class="type">Survey</span>Intro to CMS Wrap Up</li>
-                            <li><span class="type">Project</span>Recipe Page (WordPress) [cont.]</li>
+                            <li><span class="type">Exercise</span>Replicating Raycon - About Us</li>
                         </ul>
                     </div>
                 </div>
