--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -7,23 +7,23 @@
     </head>
     <body>
         <div id="layout">
-            <h1>GDWD 105 - Agenda for August 15th</h1>
-            <h3>Week 21 Day 2 (Intro to HTML)</h3>
+            <h1>GDWD 105 - Agenda for August 18th</h1>
+            <h3>Week 21 Day 3 (Intro to HTML)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Attendance Question</h2>
                     <ul>
-                        <li>Cats? or Dogs? (or both? or neither?)</li>
+                        <li>Would you prefer a staycation? or a destination vacation?</li>
                     </ul>
-                    <div class="img-container more-space dark-blue-gray">
+                    <div class="img-container">
                         <img 
-                            src="images/cats-vs-dogs.jpeg"
-                            alt="cats vs dogs"
+                            src="images/island-vacation.jpg"
+                            alt="cat on an island turtle"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">N/A</span></li>
+                        <li><span class="type">Exercise</span>Random Facts Sheet</li>
                     </ul>
                 </div>
 
@@ -33,23 +33,22 @@
 
                         <h3>Period 1 (6:10pm-7:10pm)</h3>
                         <ul>
-                            <li><span class="type">Powerpoint</span>Introduction to GitHub</li>
-                            <li><span class="type">Powerpoint</span>Intro to HTML</li>
+                            <li><span class="type">Kahoot</span>HTML Tags & Elements Review</li>
+                            <li><span class="type">Powerpoint</span>HTML Parents, Children, and Void Elements</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (7:20pm-8:30pm)</h3>
                         <ul>
-                            <li><span class="type">Powerpoint</span>HTML Tags and Elements</li>
-                            <li><span class="type">Demo</span>Hello World</li>
+                            <li><span class="type">Demo</span>Text Styling Elements</li>
                         </ul>
                     </div>
                     <h3 class="centered">Dinner Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (9:15pm-11pm)</h3>
                         <ul>
-                            <li><span class="type">Demo</span>Basic HTML Elements</li>
+                            <li><span class="type">Exercise</span>Random Facts Sheet</li>
                         </ul>
                     </div>
                 </div>
