--- a/cookbook/examples/adventure/choice1-darkforest.html
+++ b/cookbook/examples/adventure/choice1-darkforest.html
@@ -31,11 +31,11 @@
         <h2>Choice 2</h2>
         <p>What will you do?</p>
 
-        <a>
+        <a href="choice2-deeper.html">
             <img src="images/choice1-darkforest.jpg" alt="dark forest">
         </a>
         <br>
-        <a>
+        <a href="choice2-deeper.html">
             Head deeper into the forest.
         </a>
         <br><br>
@@ -49,11 +49,11 @@
         </a>
         <br><br>
 
-        <a>
+        <a href="choice2-hut.html">
             <img src="images/hut.jpg" alt="hut">
         </a>
         <br>
-        <a>
+        <a href="choice2-hut.html">
             Head to the hut, and see if anyone is home.
         </a>
     </body>
