--- a/cookbook/examples/adventure/choice2-cave.html
+++ b/cookbook/examples/adventure/choice2-cave.html
@@ -19,7 +19,7 @@
             snack before it heads off to bed.
         </p>
         <p>
-            The bear effortlessly gobbles you up, and after being deposited
+            The bear devours you in one gulp, and after being deposited
             unceremoniously in its stomach, you find
             yourself questioning some of your life choices 
             as you face...
@@ -27,5 +27,9 @@
         
         <h2>THE END</h2>
         <img src="images/bear.jpg" alt="bear">
+
+        <br>
+        <br>
+        <a href="index.html">Return to the beginning</a>
     </body>
 </html>
