--- a/cookbook/examples/adventure/choice3-crone.html
+++ b/cookbook/examples/adventure/choice3-crone.html
@@ -34,5 +34,9 @@
         
         <h2>THE END</h2>
         <img src="images/cottage.jpg" alt="cottage">
+
+        <br>
+        <br>
+        <a href="index.html">Return to the beginning</a>
     </body>
 </html>
