--- a/cookbook/examples/adventure/choice3-run.html
+++ b/cookbook/examples/adventure/choice3-run.html
@@ -9,8 +9,8 @@
         <h1>The Quest to Slay the Dragon</h1>
         <h2>Story</h2>
         <p>
-            You decide that it was a poor decision, and flee from the hideous 
-            old woman and her hut.
+            You decide that it was a poor decision to knock on the door, 
+            and flee from the hideous old woman and her hut.
         </p>
         <p>
             However, this was an equally poor decision.  Didn't anyone ever 
@@ -29,5 +29,9 @@
         
         <h2>THE END</h2>
         <img src="images/morbol.webp" alt="morbol" width="500">
+
+        <br>
+        <br>
+        <a href="index.html">Return to the beginning</a>
     </body>
 </html>
