--- a/cookbook/examples/adventure/index.html
+++ b/cookbook/examples/adventure/index.html
@@ -12,13 +12,13 @@
             You are a farmer who was summoned by the king out of nowhere.
             He says that his royal sage has foreseen that you are the chosen 
             one to defeat the dragon in the mountain passes of the south.  
-            He gives you a sword and wishes you the best on your journey.
+            He wishes you the best on your journey.
         </p>
         <h2>Choice 1</h2>
         <p>What will you do?</p>
 
         <a href="choice1-darkforest.html">
-            <img src="images/choice1-darkforest.jpg" alt="dark forest">
+            <img src="images/choice1-darkforest.jpg" alt="dark forest" width="500">
         </a>
         <br>
         <a href="choice1-darkforest.html">
@@ -26,21 +26,11 @@
         </a>
         <br><br>
 
-        <a>
-            <img src="images/choice1-town.jpg" alt="town">
+        <a href="choice1-nope.html">
+            <img src="images/wheat.png" alt="farm" width="500">
         </a>
         <br>
-        <a>
-            Head into town to stock up on supplies and get advice from 
-            the adventurers' guild
-        </a>
-        <br><br>
-
-        <a>
-            <img src="images/choice1-town.jpg" alt="farm">
-        </a>
-        <br>
-        <a>
+        <a href="choice1-nope.html">
             Refuse to accept the quest, and head back to your farm.
         </a>
     </body>
