--- a/cookbook/examples/adventure/choice2-deeper.html
+++ b/cookbook/examples/adventure/choice2-deeper.html
@@ -11,35 +11,45 @@
         <p>
             Who knew that going deeper into the dark forest would be a good 
             idea?  Because not long after, the trees give way to a vast 
-            golden plain, leading up to an intimidating craggy mountain.
+            golden plain, leading up to an imposing craggy mountain.
         </p>
         <p>
             You pass through the plains, the flourishing vegatation giving 
             way to gravel and stone as you get closer to the mountain range.
         </p>
         <p>
-            As you reach the base of the mountain, you find it is littered with 
+            As you reach the base of the mountain near a large cave, 
+            you find it is littered with 
             the charred bones of fallen warriors who came before, their armor,
             shields, and weapons discarded on the ground.
+        </p>
+        <p>
+            Suddenly, you hear an ear-shattering roar echoing out from the cave.
+            Then you see it: a majestic and fearsome dragon striding out from 
+            within.  It sniffs the air, and then its eyes lock onto you.
         </p>
         <h2>Choice 3</h2>
         <p>What will you do?</p>
 
-        <a href="choice3-crone.html">
-            <img src="images/crone.png" alt="old crone" width="500">
+        <a href="choice3-attack.html">
+            <img 
+                src="images/knight-and-dragon-in-battle.jpg" 
+                alt="attack" 
+                width="500"
+            >
         </a>
         <br>
-        <a href="choice3-crone.html">
-            Accept her invitation and enter.
+        <a href="choice3-attack.html">
+            Pick up the nearest sword and shield and charge at the dragon!
         </a>
         <br><br>
 
-        <a href="choice3-run.html">
-            <img src="images/runaway.jpg" alt="cave" width="500">
+        <a href="choice3-stand.html">
+            <img src="images/dragon-standoff.png" alt="cave" width="500">
         </a>
         <br>
-        <a href="choice3-run.html">
-            Turn around and run away.
+        <a href="choice3-stand.html">
+            Stay calm and stand your ground.
         </a>
         <br><br>
 
