--- a/cookbook/ingredients/italics.html
+++ b/cookbook/ingredients/italics.html
@@ -17,7 +17,7 @@
 
         Note how all this text is all on the same line.
 
-        That is because the &lt;i&gt; element is an 
+        That is because the i element is an 
         <i>inline</i>
         element, so regardless of how we format the code,
         it will all be on the same line on the page
