--- a/cookbook/ingredients/orderedLists.html
+++ b/cookbook/ingredients/orderedLists.html
@@ -7,8 +7,8 @@
         <title>&lt;ol&gt; (Ordered List) Element</title>
     </head>
     <body>
-        The ordered list (&lt;ol&gt;) element is always paired with 
-        list item (&lt;li&gt;) elements as children. In ordered lists,
+        The ordered list (ol) element is always paired with 
+        list item (li) elements as children. In ordered lists,
         list items have numbers in front of them by default.
 
         <ol>
