--- a/cookbook/ingredients/bolds.html
+++ b/cookbook/ingredients/bolds.html
@@ -17,7 +17,7 @@
 
         Note how all this text is all on the same line.
 
-        That is because the &lt;b&gt; element is an 
+        That is because the b element is an 
         <b>inline</b>
         element, so regardless of how we format the code,
         it will all be on the same line on the page
