--- a/cookbook/ingredients/superscripts.html
+++ b/cookbook/ingredients/superscripts.html
@@ -17,7 +17,7 @@
 
         Note how all this text is all on the same line.
 
-        That is because the &lt;sup&gt; element is an 
+        That is because the sup element is an 
         inline element, so regardless of how we format 
         the code, it will all be on the same line on 
         the page (unless the line wraps).
