--- a/cookbook/ingredients/unorderedLists.html
+++ b/cookbook/ingredients/unorderedLists.html
@@ -7,8 +7,8 @@
         <title>&lt;ul&gt; (Unordered List) Element</title>
     </head>
     <body>
-        The unordered list (&lt;ul&gt;) element is always paired with 
-        list item (&lt;li&gt;) elements as children. In unordered lists,
+        The unordered list (ul) element is always paired with 
+        list item (li) elements as children. In unordered lists,
         list items have bullets in front of them by default.
 
         <ul>
