--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -7,26 +7,24 @@
     </head>
     <body>
         <div id="layout">
-            <h1>GDWD 105 - Agenda for August 19th</h1>
-            <h3>Week 21 Day 4 (Intro to HTML)</h3>
+            <h1>GDWD 105 - Agenda for August 20th</h1>
+            <h3>Week 21 Day 5 (Intro to HTML)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Attendance Question</h2>
                     <ul>
-                        <li>
-                            What is one of your favorite ice cream flavors? 
-                            Any toppings you like to add?
-                        </li>
+                        <li>What is (or was) your favorite breakfast cereal?</li>
                     </ul>
                     <div class="img-container">
                         <img 
-                            src="images/icecream-cats.jpg"
-                            alt="lazy sundae"
+                            src="images/kamehamehos.jpeg"
+                            alt="kamehamehos"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Exercise</span>Recipe Page (Code)</li>
+                        <li><span class="type">Survey</span>Intro to HTML Wrap Up</li>
+                        <li><span class="type">Project</span>Wiki Page (Code)</li>
                     </ul>
                 </div>
 
@@ -36,22 +34,25 @@
 
                         <h3>Period 1 (6:10pm-7:10pm)</h3>
                         <ul>
-                            <li><span class="type">Demo</span>Unordered List Elements</li>
-                            <li><span class="type">Powerpoint</span>Clean Code Part 1</li>
+                            <li><span class="type">Powerpoint</span>Intro to HTML Attributes</li>
+                            <li><span class="type">Demo</span>Image Elements</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (7:20pm-8:30pm)</h3>
                         <ul>
-                            <li><span class="type">Demo</span>Unordered List Elements</li>
+                            <li><span class="type">Powerpoint</span>Clean Code Part 2</li>
+                        <li><span class="type">Project</span>Wiki Page (Code)</li>
                         </ul>
                     </div>
                     <h3 class="centered">Dinner Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (9:15pm-11pm)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Recipe Page (Code)</li>
+                            <li><span class="type">Lab Time</span>Quiz Study Hints</li> 
+                            <li><span class="type">Survey</span>Intro to HTML Wrap Up</li>
+                            <li><span class="type">Project</span>Wiki Page (Code) [cont.]</li>
                         </ul>
                     </div>
                 </div>
