--- a/cookbook/ingredients/anchors-internal.html
+++ b/cookbook/ingredients/anchors-internal.html
@@ -8,7 +8,7 @@
         <link href="css/anchors.css" rel="stylesheet">
     </head>
     <body>
-        <h3 id="intenral">Internal Hyperlinks</h3>
+        <h3 id="internal">Internal Hyperlinks</h3>
         <p>
             When you click on an internal hyperlink, you will stay on the 
             current page, but will be navigated to a particular HTML element 
@@ -82,5 +82,6 @@
         <p class="extraSpace"></p>
         <h3 id="section3">Section 3</h3>
         <p class="extraSpace"></p>
+        <a href="#internal">Jump back to the top</a>
     </body>
 </html>
