--- a/cookbook/ingredients/anchors-internal.html
+++ b/cookbook/ingredients/anchors-internal.html
@@ -85,6 +85,11 @@
         </p>
         <!-- This is a code comment; they are ignored by the computer, -->
         <!-- but are great for leaving notes for yourself or others. -->
+        <!-- You can manually type the characters at the beginning -->
+        <!-- and end, and then put the text in the middle. -->
+        <!-- Or, you can type the text first, select it -->
+        <!-- and hit CMD-/ (for Mac) or CTRL-/ (for PC) to create a comment -->
+        
 
         <!-- Don't ever use the code below on a professional web page... -->
         <!-- We're just using them for extra space until we learn CSS. -->
