--- a/cookbook/examples/basic-css-drills/index.html
+++ b/cookbook/examples/basic-css-drills/index.html
@@ -10,7 +10,7 @@
     <body>
         <h1>The 10 Trials of Basic CSS</h1>
         <section id="drill1">
-            <h2>Task #1</h2>
+            <h2>Trial #1</h2>
             <img src="images/drill1.png" alt="Drill 1">
             <p>
                 Use the text below and the color "green" to mimic the image
@@ -28,7 +28,7 @@
         </section>
 
         <section id="drill2">
-            <h2>Task #2</h2>
+            <h2>Trial #2</h2>
             <img src="images/drill2.png" alt="Drill 2">
             <p>
                 Use the text below and the color #F711F7 to mimic the image 
@@ -48,7 +48,7 @@
         </section>
 
         <section id="drill3">
-            <h2>Task #3</h2>
+            <h2>Trial #3</h2>
             <img src="images/drill3.png" alt="Drill 3">
             <p>
                 Use the text below and the the colors "red", 
@@ -78,7 +78,7 @@
         </section>
 
         <section id="drill4">
-            <h2>Task #4</h2>
+            <h2>Trial #4</h2>
             <img src="images/drill4.png" alt="Drill 4">
             <p>
                 Use the text below and the color "skyblue" to mimic 
@@ -96,7 +96,7 @@
         </section>
 
         <section id="drill6">
-            <h2>Task #5</h2>
+            <h2>Trial #5</h2>
             <img src="images/drill6.png" alt="Drill 6">
             <p>
                 Use the text below and the color
@@ -117,7 +117,7 @@
         </section>
 
         <section id="drill7">
-            <h2>Task #6</h2>
+            <h2>Trial #6</h2>
             <img src="images/drill7.png" alt="Drill 7">
             <p>
                 Use the text below to mimic the image above.
@@ -136,7 +136,7 @@
         </section>
 
         <section id="drill8">
-            <h2>Task #7</h2>
+            <h2>Trial #7</h2>
             <img src="images/drill8.png" alt="Drill 8">
             <p>
                 Use the text below to mimic the image above.
@@ -159,7 +159,7 @@
         </section>
 
         <section id="drill9">
-            <h2>Task #8</h2>
+            <h2>Trial #8</h2>
             <img src="images/drill9.png" alt="Drill 9">
             <p>
                 Use the text below to mimic the image above.
@@ -178,10 +178,11 @@
         </section>
 
         <section id="drill11">
-            <h2>Task #9</h2>
+            <h2>Trial #9</h2>
             <img src="images/drill11.png" alt="Drill 11">
             <p>
-                Use the text below to mimic the image above. 
+                Use the text below to mimic the image above.
+                <b>You are NOT allowed to use headings for this trial.</b> 
                 (HINT: that big text is about 36px
                 tall)
             </p>
@@ -199,10 +200,11 @@
         </section>
 
         <section id="drill13">
-            <h2>Task #10</h2>
+            <h2>Trial #10</h2>
             <img src="images/drill13.png" alt="Drill 13">
             <p>
                 Use the text below to mimic the image above.
+                <b>You are NOT allowed to use headings for this trial.</b> 
                 (HINT: the sizes of the fonts used in the image are 
                 48px, 24px, and 12px, though not in that order)
             </p>
